Update processNameForHITS.java